<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_dark"
        android:padding="@dimen/right_margin"
        android:text="@string/name_text"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/common_text" />

    <ImageView
        android:id="@+id/imagePhoto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/photo_height"
        android:background="@drawable/bc_photo"
        android:contentDescription="@string/photo_description"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/bc_photo" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginStart="@dimen/left_margin"
            android:layout_marginTop="@dimen/all_other_margins"
            android:contentDescription="@string/uu_logo"
            app:srcCompat="@drawable/uu_logo" />

        <TextView
            android:id="@+id/keyInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/all_other_margins"
            android:layout_marginEnd="@dimen/right_margin"
            android:layout_marginStart="@dimen/all_other_margins"
            android:layout_marginTop="@dimen/all_other_margins"
            android:text="@string/key_info_text"
            android:textSize="@dimen/common_text" />
    </TableRow>

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/all_other_margins"
        android:layout_marginEnd="@dimen/right_margin"
        android:layout_marginStart="@dimen/left_margin"
        android:layout_marginTop="@dimen/all_other_margins"
        android:text="@string/description_text"
        android:textSize="@dimen/common_text" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/all_other_margins"
        android:layout_marginEnd="@dimen/right_margin"
        android:layout_marginStart="@dimen/left_margin"
        android:layout_marginTop="@dimen/all_other_margins"
        android:ems="10"
        android:hint="@string/hint_text"
        android:inputType="textPersonName"
        android:textSize="@dimen/common_text" />

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/all_other_margins"
        android:layout_marginEnd="@dimen/right_margin"
        android:layout_marginStart="@dimen/left_margin"
        android:layout_marginTop="@dimen/all_other_margins"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        android:text="@string/button_send_text"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textSize="@dimen/common_text" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/right_margin"
        android:gravity="center">

        <ImageView
            android:id="@+id/fbIcon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="@dimen/all_other_margins"
            android:clickable="true"
            android:contentDescription="@string/fb_logo"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/fb_logo"
            android:focusable="true" />

        <ImageView
            android:id="@+id/vkIcon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginStart="@dimen/all_other_margins"
            android:clickable="true"
            android:contentDescription="@string/vk_logo"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/vk_logo"
            android:focusable="true" />
    </TableRow>
</LinearLayout>